# MeshViewer

./: .gitignore  CMakeLists.txt  STRUCTURE.md  run_meshviewer.bat  run_qt_minimal.bat  test_quad_read.py
data/: octree_sphere_spider.qmesh3d  octree_sphere_spider.vtk  octree_sphere_spider_binary.stl  sphere_spider.stl  test_2d.vtk  test_2d_ascii.stl  test_2d_binary.stl  test_3d.vtk  test_3d_ascii.stl  test_3d_binary.stl  test_quadtree.qmesh
modules/aft2d/: CMakeLists.txt
modules/aft2d/include/: AFT2D.h
modules/aft2d/src/: AFT2D.cpp
modules/benchmark/: CMakeLists.txt  benchmark.cpp
modules/delaunay2d/: CMakeLists.txt
modules/delaunay2d/include/: Delaunay2D.h
modules/delaunay2d/src/: Delaunay2D.cpp
modules/delaunay2dshow/: CMakeLists.txt
modules/delaunay2dshow/include/: Delaunay2DShow.h  DelaunayCanvas.h
modules/delaunay2dshow/src/: Delaunay2DShow.cpp  DelaunayCanvas.cpp  main.cpp
modules/delaunay3d/: CMakeLists.txt
modules/delaunay3d/include/: Delaunay3D.h
modules/delaunay3d/src/: Delaunay3D.cpp
modules/geometry/: CMakeLists.txt
modules/geometry/include/: Geometry.h  PointCloud.h  PointCloudUtils.h
modules/geometry/src/: Geometry.cpp  PointCloud.cpp  PointCloudUtils.cpp
modules/mesher2d/: CMakeLists.txt
modules/mesher2d/include/: Mesher2D.h
modules/mesher2d/src/: Mesher2D.cpp
modules/meshutils/: CMakeLists.txt
modules/meshutils/include/: MeshUtils.h
modules/meshviewer/: CMakeLists.txt
modules/meshviewer/include/: MeshReader.h  MeshRenderer.h  MeshViewer.h  PointCloudDialog.h
modules/meshviewer/src/: MeshReader.cpp  MeshRenderer.cpp  MeshViewer.cpp  PointCloudDialog.cpp  main.cpp
modules/octree/: CMakeLists.txt
modules/octree/include/: Octree.h
modules/octree/src/: Octree.cpp
modules/quadtree/: CMakeLists.txt
modules/quadtree/include/: Quadtree.h
modules/quadtree/src/: Quadtree.cpp
test/: CMakeLists.txt  check_outward.py  check_surface_consistency.py  check_volume.py  check_winding.py  check_winding2.py  check_winding_all.py  check_winding_tet.py  run_gl_minimal.bat  test_aft2d.cpp  test_delaunay2d.cpp  test_delaunay2d_opt.cpp  test_delaunay3d.cpp  test_delaunay_property.cpp  test_delaunay_winding.cpp  test_export.cpp  test_mesher2d.cpp  test_meshutils.cpp  test_octree.cpp  test_octree_diagnostic.cpp  test_octree_from_stl.cpp  test_qt_gl_minimal.cpp  test_qt_minimal.cpp  test_quadtree.cpp  test_roundtrip.cpp  test_stl_to_delaunay2d.cpp
